--- a/DSL/Ruuter.public/GET/calendar/national-holidays/eoy.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/eoy.yml
@@ -3,9 +3,9 @@ declaration:
   version: 0.1
   name: "Find Holidays Until End of Year"
   description: "Returns all holidays from today till the end of the year"
-  method: get
-  accepts: json
-  returns: json
+  method: GET
+  accepts: JSON
+  returns: JSON
   allowlist:
     body:
     - field: chatId
