--- a/DSL/Ruuter.public/GET/calendar/national-holidays/find/by-name.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/find/by-name.yml
@@ -3,9 +3,9 @@ declaration:
   version: 0.1
   name: "Holiday Search Service"
   description: "Searches for a national holiday by name in the 2024 calendar"
-  method: get
-  accepts: json
-  returns: json
+  method: GET
+  accepts: JSON
+  returns: JSON
   namespace: common-services
   allowlist:
     body:
