--- a/DSL/Ruuter.public/GET/calendar/national-holidays/mock/eoy.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/mock/eoy.yml
@@ -3,9 +3,9 @@ declaration:
   version: 0.1
   name: "MOCK - Find Holidays Until End of Year"
   description: "MOCK - Returns all holidays from today's date until the end of the year"
-  method: get
-  accepts: json
-  returns: json
+  method: GET
+  accepts: JSON
+  returns: JSON
   allowlist:
     body:
     - field: chatId
