--- a/DSL/Ruuter.public/GET/calendar/national-holidays/mock/next.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/mock/next.yml
@@ -3,9 +3,9 @@ declaration:
   version: 0.1
   name: "MOCK - Find Upcoming Holiday"
   description: "MOCK - Returns the next upcoming national holiday from today's date"
-  method: get
-  accepts: json
-  returns: json
+  method: GET
+  accepts: JSON
+  returns: JSON
   allowlist:
     body:
     - field: chatId
