--- a/DSL/Ruuter.public/GET/calendar/national-holidays/mock/ytd.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/mock/ytd.yml
@@ -3,9 +3,9 @@ declaration:
   version: 0.1
   name: "MOCK - Filter Holidays Year-to-Date"
   description: "MOCK - This service filters holidays for the current year-to-date"
-  method: get
-  accepts: json
-  returns: json
+  method: GET
+  accepts: JSON
+  returns: JSON
   allowlist:
     body:
     - field: chatId
