--- a/DSL/Ruuter.public/GET/calendar/national-holidays/previous.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/previous.yml
@@ -3,9 +3,9 @@ declaration:
   version: 0.1
   name: "Find Previous Holiday"
   description: "Returns most recent national holiday before today's date"
-  method: get
-  accepts: json
-  returns: json
+  method: GET
+  accepts: JSON
+  returns: JSON
   allowlist:
     body:
     - field: chatId
