--- a/DSL/Ruuter.public/GET/calendar/national-holidays/today.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/today.yml
@@ -3,9 +3,9 @@ declaration:
   version: 0.1
   name: "Check Today's Holiday"
   description: "This service checks if today is a national holiday"
-  method: get
-  accepts: json
-  returns: json
+  method: GET
+  accepts: JSON
+  returns: JSON
   allowlist:
     body:
     - field: chatId
