--- a/DSL/Ruuter.public/GET/electricity/mock/current-price.yml
+++ b/DSL/Ruuter.public/GET/electricity/mock/current-price.yml
@@ -3,9 +3,9 @@ declaration:
   version: 0.1
   name: "MOCK - Current electricity Price Service"
   description: "MOCK - This service fetches electricity prices for the current hour"
-  method: post
-  accepts: json
-  returns: json
+  method: POST
+  accepts: JSON
+  returns: JSON
   namespace: common-services
   allowlist:
     body:
