--- a/DSL/Ruuter.public/GET/electricity/mock/lowest-price.yml
+++ b/DSL/Ruuter.public/GET/electricity/mock/lowest-price.yml
@@ -3,9 +3,9 @@ declaration:
   version: 0.1
   name: "MOCK - Electricity Price Service"
   description: "MOCK -This service fetches the lowest electricity prices for today"
-  method: post
-  accepts: json
-  returns: json
+  method: POST
+  accepts: JSON
+  returns: JSON
   namespace: common-services
   allowlist:
     body:
