--- a/DSL/Ruuter.public/GET/public-initiatives/most-recent.yml
+++ b/DSL/Ruuter.public/GET/public-initiatives/most-recent.yml
@@ -3,9 +3,9 @@ declaration:
   version: 0.1
   name: "5 most recent active initiatives service"
   description: "Provides information for 5 most recent active initiatives"
-  method: post
-  accepts: json
-  returns: json
+  method: POST
+  accepts: JSON
+  returns: JSON
   namespace: common-services
   allowlist:
     body:
