--- a/DSL/Ruuter.public/GET/riigikogu/five-most-recent.yml
+++ b/DSL/Ruuter.public/GET/riigikogu/five-most-recent.yml
@@ -3,9 +3,9 @@ declaration:
   version: 0.1
   name: "Riigikogu 5 most recent voting results service"
   description: "Provides information for 5 most-recent voting results in Riigikogu"
-  method: post
-  accepts: json
-  returns: json
+  method: POST
+  accepts: JSON
+  returns: JSON
   namespace: common-services
   allowlist:
     body:
