--- a/DSL/Ruuter.public/GET/riigikogu/members-participation.yml
+++ b/DSL/Ruuter.public/GET/riigikogu/members-participation.yml
@@ -3,9 +3,9 @@ declaration:
   version: 0.1
   name: Member Participation Statistics Service
   description: A service that provides participation statistics for Riigikogu members.
-  method: post
-  accepts: json
-  returns: json
+  method: POST
+  accepts: JSON
+  returns: JSON
   namespace: common-services
   allowlist:
     body:
