--- a/DSL/Ruuter.public/GET/riigikogu/mock/recent-voting.yml
+++ b/DSL/Ruuter.public/GET/riigikogu/mock/recent-voting.yml
@@ -3,9 +3,9 @@ declaration:
   version: 0.1
   name: "MOCK - Recent voting Service"
   description: "MOCK - A service that provides most recent voting result"
-  method: post
-  accepts: json
-  returns: json
+  method: POST
+  accepts: JSON
+  returns: JSON
   namespace: common-services
   allowlist:
     body:
