--- a/DSL/Ruuter.public/GET/statistics-estonia/consumer-price-index.yml
+++ b/DSL/Ruuter.public/GET/statistics-estonia/consumer-price-index.yml
@@ -3,9 +3,9 @@ declaration:
   version: 0.1
   name: "Consumer Price Index Query"
   description: "Provides CPI change information per month"
-  method: post
-  accepts: json
-  returns: json
+  method: POST
+  accepts: JSON
+  returns: JSON
   namespace: common-services
   allowlist:
     body:
