--- a/DSL/Ruuter.public/POST/weather/EE.yml
+++ b/DSL/Ruuter.public/POST/weather/EE.yml
@@ -2,9 +2,9 @@ declaration:
   call: declare
   version: "0.1"
   description: "Gets weather information for locations in EE - estonia"
-  method: post
-  accepts: json
-  returns: json
+  method: POST
+  accepts: JSON
+  returns: JSON
   namespace: common-services
   allowlist:
     body:
